--- a/diceButton.css
+++ b/diceButton.css
@@ -11,11 +11,19 @@ body {
     align-items: center;
 }
 
-button {
-    height: 250px;
-    width: 250px;
-    border: black; 
-    font-size:175px;
+.center{
+   display: flex;
+   justify-content: center;
+   /* flex-direction: column; */
+   border: "1px solid red";
+}
+
+.button {
+    height: 50px;
+    width: 50px;
+    border:"1px solid black";
+    font-size:15px;
+
   
 }
 
